# pyramid-cookiecutter-starter

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py
tests/: test_it.py
{{cookiecutter.repo_name}}/: development.ini  production.ini  pyproject.toml
