[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
authors = []

[tool.poetry.dependencies]
python = "^3.4"
plaster-pastedeploy
pyramid
pyramid_{{ cookiecutter.template_language }}
pyramid-debugtoolbar
waitress
{%- if cookiecutter.backend == 'sqlalchemy' %}
alembic
pyramid-retry
pyramid-tm
SQLAlchemy
transaction
"zope.sqlalchemy"
{%- elif cookiecutter.backend == 'zodb' %}
pyramid_retry
pyramid_tm
pyramid_zodbconn
transaction
ZODB3
{%- endif %}

[tool.poetry.dev-dependencies]
WebTest = ">=1.3.1"
pytest = ">=3.7.4"
pytest-cov

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
