[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
authors = []

[tool.poetry.dependencies]
python = "^3.6"
plaster-pastedeploy = "^0.7"
pyramid= "^1.10.5"
{%- if cookiecutter.template_language == 'jinja2' %}
pyramid_jinja2 = "^2.8"
{%- elif cookiectter.template_language == 'mako' %}
pyramid_mako = "^1.1.0"
{%- elif cookiecutter.template_language == 'chameleon' %}
pyramid_chameleon = "^0.3"
{%- endif %}
pyramid-debugtoolbar = "^4.9"
waitress = "^1.4.4"
{%- if cookiecutter.backend == 'sqlalchemy' %}
alembic = "^1.5.4"
pyramid-retry = "^2.1.1"
pyramid-tm = "^2.4"
SQLAlchemy = "^1.3.23"
transaction = "^3.0.1"
"zope.sqlalchemy" = "^1.3"
{%- elif cookiecutter.backend == 'zodb' %}
pyramid_retry = "^2.1.1"
pyramid_tm = "^2.4"
pyramid_zodbconn = "^0.8.1"
transaction = "^3.0.1"
ZODB3 = "^3.11.0"
{%- endif %}

[tool.poetry.dev-dependencies]
WebTest = ">=1.3.1"
pytest = ">=3.7.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

{%- if cookiecutter.backend == 'sqlalchemy' %}
[tool.poetry.scripts]
initialize_{{ cookiecutter.repo_name }}_db = '{{ cookiecutter.repo_name }}.scripts.initialize_db:main'
{%- endif %}

